k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wissemgh5/pfe_backend:91af9daa6c205adf9fcc7eb1074294dc9650c30b
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: backend
          env:  # Add environment variables here
            - name: DBPASSWD
              value: tutopwd
            - name: DBUSERNAME
              value: tutorialsuser
            - name: DBNAME
              value: tutorialsdb
            - name: DBHOST
              value: db
          resources:
            requests:
              memory: "256Mi"  # Request 1 GiB of RAM
            limits:
              memory: "1Gi"
