k8s/db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dataset-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: dataset-volume
          hostPath:
            path: ../dataset/innit.sql
