k8s/sonarqube-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonarqube
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      containers:
        - image: sonarqube:9.9-community
          name: sonarqube
          ports:
            - containerPort: 9000
              name: sonarqube
