k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host:    # Replace with your domain or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend   # Name of your frontend service
                port:
                  number: 80
          - path: /sonarqube
            pathType: Prefix
            backend:
              service:
                name:  sonar
                port:
                  number: 9000
